Formally added saving! Notifications now also display "Progress saved" to communicate this is happening. Added a bunch of new color palettes to smooth out the progression curve. Speaking of that, unlockables are enabled now too! You can now quit a level prematurely by pausing the game and pressing Backspace twice in a row. Fixed some level generation bugs, now generated levels look cleaner and are much nicer to play on. You can now cancel the jump into any other move (except another jump). A bunch of more game feel tweaks.

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ html, body {
   left: 50%;
   visibility: hidden;
   font-size: 20px;
-  background-color: #ffffff88;
+  background-color: #ffffffaa;
   width: 180px;
   padding: 5px;
 }
